<resources>
    <string name="app_name">Grid Image Search</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_image_details">Image Details</string>
      <string name="label_img_sz">Size</string>
      <string name="label_colors">Color</string>
    <string name="label_img_type">Type</string>
     <string name="label_website">Site</string>
    <string name="et_site_hint">Microsoft</string>
    <string name="bt_save">Save</string>
    <string name="bt_cancel">Cancel</string>
    <string name="image_size_default">any</string>
    <string-array name="image_sizes">
        <item>@string/image_size_default</item>
        <item>icon</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
        <item>xxlarge</item>
        <item>huge</item>
    </string-array>

    <string name="image_color_default">any</string>
    <string-array name="image_colors">
        <item>@string/image_color_default</item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>

    <string name="img_type_default">any</string>
    <string-array name="img_types">
        <item>@string/img_type_default</item>
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>
</resources>
