<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frag_filters"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:background="@color/primary_material_light">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvImageSizeLabel"
            android:text="@string/label_img_sz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
        <Spinner
            android:id="@+id/spImageSize"
            android:layout_marginLeft="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/image_sizes" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvColorLabel"
            android:text="@string/label_colors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
        <Spinner
            android:id="@+id/spColor"
            android:layout_marginLeft="10dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/image_colors"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvImgTypeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_img_type"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <Spinner
            android:id="@+id/spImageTypes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:entries="@array/img_types"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSiteLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_website"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <EditText
            android:id="@+id/etSite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:hint="@string/et_site_hint"
            android:text=""/>
    </LinearLayout>

</LinearLayout>